--- a/doc/examples/jest_react/package.json
+++ b/doc/examples/jest_react/package.json
@@ -23,6 +23,7 @@
     "jest-cli": "^24.8.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "react-test-renderer": "^16.2.0"
+    "react-test-renderer": "^16.2.0",
+    "regenerator-runtime": "^0.13.7"
   }
 }
